Feat/stock overview
